--- a/public/stylesheets/website/diseno-interfaces-live.styl
+++ b/public/stylesheets/website/diseno-interfaces-live.styl
@@ -46,7 +46,7 @@ a
 .chat 
     nav 
       text-align left
-      margin 0 5%
+      margin 0
       font-size 16px
       text-transform uppercase
       padding 2px 0
@@ -124,6 +124,7 @@ a
 
 
         .message
+            color #444
             padding 10px 0
             position relative
             overflow hidden
@@ -176,6 +177,7 @@ a
 
 
             .user
+              color #444
               font-weight bold
 
             .time
