--- a/views/website/index_mini.jade
+++ b/views/website/index_mini.jade
@@ -4,21 +4,22 @@ block content
     .chat
         .chatbox: form.chatform#chatform
             input(type="text", placeholder="Participa en el chat", maxlength="128").field
+            input(type="submit", value="enviar").submit
 
-            if user
-                p.publish
-                    case user.red
-                        when 'twitter'
-                            span Publicar a twitter
-                        when 'facebook'
-                            span Publicar a facebook
-                        default
-                            span Publicar 
+            //if user
+            //    p.publish
+            //        case user.red
+            //            when 'twitter'
+            //                span Publicar a twitter
+            //            when 'facebook'
+            //                span Publicar a facebook
+            //            default
+            //               span Publicar 
 
-                    if user.admin
-                        input(type="checkbox")#publish
-                    else
-                        input(type="checkbox", checked)#publish
+            //        if user.admin
+            //            input(type="checkbox")#publish
+            //        else
+            //            input(type="checkbox", checked)#publish
 
         if user
             nav#user-nav
