--- a/views/website/index.jade
+++ b/views/website/index.jade
@@ -15,10 +15,10 @@ block content
                         default
                             span Publicar 
 
-                    if user.admin
-                        input(type="checkbox")#publish
-                    else
-                        input(type="checkbox", checked)#publish
+                    //if user.admin
+                        //input(type="checkbox")#publish
+                    //else
+                        //input(type="checkbox", checked)#publish
 
         if user
             nav#user-nav
