--- a/views/website/index.jade
+++ b/views/website/index.jade
@@ -6,7 +6,7 @@ block content
             .container-field
                 input(type="text", placeholder="Participa en el chat", maxlength="128").field
             if user
-                input(type="submit", value="enviar").value
+                input(type="submit", value="enviar").submit
 
         if user
             nav#user-nav
