user login vars

--- a/public/stylesheets/website/newChat.styl
+++ b/public/stylesheets/website/newChat.styl
@@ -10,6 +10,14 @@ body
     background white
 a
     color gris
+#login
+    a
+        color white
+.dialog
+    .panel
+        background verde
+        border 1px solid amarillo
+        box-shadow none
 .container-field
     margin-right 100px
 .submit
