--- a/public/stylesheets/website/newChat.styl
+++ b/public/stylesheets/website/newChat.styl
@@ -50,9 +50,11 @@ a
 
     .messages 
         padding-bottom 20px
-        top 86px
-        border-top 1px solid gris_claro
         padding-top 1px
+        top 55px
+        &.logged
+            top 86px
+            border-top 1px solid gris_claro
         .message
             color gris
             text-shadow none
