--- a/public/stylesheets/website/newChat.styl
+++ b/public/stylesheets/website/newChat.styl
@@ -59,6 +59,7 @@ a
             color gris
             text-shadow none
             padding-right 20px
+            border-bottom 1px soldi #EAEAEA
             &.sameuser
                 background gris_claro
                 border-left-color amarillo
