--- a/public/stylesheets/website/newChat.styl
+++ b/public/stylesheets/website/newChat.styl
@@ -45,6 +45,11 @@ a
     &:focus
         border-color amarillo
 .chat 
+    .nav
+        float right
+        a
+            &:hover
+                color black
     .chatbox
         padding 0
         .chatform
@@ -59,10 +64,10 @@ a
             top 86px
             border-top 1px solid gris_claro
         .message
+            border-bottom 1px solid #EAEAEA
             color gris
-            text-shadow none
             padding-right 20px
-            border-bottom 1px soldi #EAEAEA
+            text-shadow none
             &.sameuser
                 background gris_claro
                 border-left-color amarillo
