--- a/views/website/index.jade
+++ b/views/website/index.jade
@@ -10,7 +10,7 @@ block content
 
         if user
             p.user
-                img(class="avatar" src=user.avatar)
+                img(class="avatar", src=user.avatar)
                 user.username
 
             nav#user-nav
