fixes and emoticons

--- a/public/stylesheets/website/newChat.styl
+++ b/public/stylesheets/website/newChat.styl
@@ -13,6 +13,9 @@ a
 #login
     a
         color white
+.emoticon
+    background:url(/images/conferencia/emoticons.png) left top no-repeat;
+    
 .dialog
     .panel
         background verde
@@ -89,6 +92,8 @@ a
             .avatar
                 border-radius 50%
                 overflow hidden
+            .user
+                float none
             .borrar
                 color amarillo
                 text-shadow 2px 1px 0 #000
