fix for mentions top in chat

--- a/public/stylesheets/website/newChat.styl
+++ b/public/stylesheets/website/newChat.styl
@@ -76,6 +76,7 @@ a
         padding-top 1px
         top 55px
         &.logged
+        &#mentions
             top 110px
             border-top 1px solid gris_claro
         .message
